--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <ul>
             <li><a href="recipes/lasagna.html">Lasagna</a></li>
             <li><a href="recipes/fajitas.html">Fajitas</a></li>
+            <li><a href="recipes/stir-fry.html">Stir Fry</a></li>
         </ul>
     </body>
 </html>
